# $Id$

2008-03-05	Ivan Y.  Khvostishkov

	* core/Form/Primitives/PrimitiveDate.class.php: exportValue()
	implemented.

2008-03-04	Ivan Y. Khvostishkov

	* core/Form/Form.class.php: some documentation.

	* core/Form/Primitives/BasePrimitive.class.php: getFormValue() added.

2008-03-04	Konstantin V. Arkhipov

	* core/DB/PostgresDialect.class.php: PostgreSQL-8.3 doesn't like
	comparsion between integer and varchar, so dialect now quotes all
	integers by default; again.

2008-03-04	Denis M. Gabaidulin

	* core/Base/Assert.class.php: isNotEmptyArray().

2008-02-29	Denis M. Gabaidulin

	* core/Cache/WatermarkedPeer.class.php: version duplication removed.

2008-02-28	Konstantin V. Arkhipov

	* 1.0.2 released.

2008-02-28	Ivan Y. Khvostishkov

	* main/Net/Soap/PrototypedSoapClient.class.php: pretty wrap for
	SoapClient with strict XSD validation and Business classes mappings.

2008-02-28	Vladlen Y. Koshelev

	* core/Form/Filters/RussianTypograph.class.php: now works with
	unicode correctly; extra rules added: compress whitespaces,
	&nbsp; after short strings.

2008-02-25	Igor V. Gulyaev

	* main/Utils/RussianTextUtils.class.php: getMonthByGenitiveCase()
	added.

2008-02-20	Ivan Y. Khvostishkov

	* main/Flow/NullController.class.php: a way for loopback your model
	through the filter.

2008-02-19	Konstantin V. Arkhipov

	* meta/: syntax check replaced by class compiling.

2008-02-18	Ivan Y. Khvostishkov

	* core/Base/Assert.class.php: isTypelessEqual() added.

2008-02-18	Konstantin V. Arkhipov

	* core/Cache/WatermarkedPeer.class.php: further collisions prevention:
	onPHP's version now appends to watermark.

2008-02-17	Konstantin V. Arkhipov

	* main/DAOs/Workers/TransparentDaoWorker.class.php,
	main/DAOs/Workers/NullDaoWorker.class.php: now extends from
	CommonDaoWorker to eliminate code duplication.

	* main/DAOs/Workers/: added expires argument to cachedFetchObject().

2008-02-15	Konstantin V. Arkhipov
