@@ -1,5 +1,9 @@
 # $Id$
 
+2008-03-07	Denis M. Gabaidulin
+
+	* main/UnifiedContainer/UnifiedContainer.class.php: dropListByParent().
+
 2008-03-05	Ivan Y.  Khvostishkov
 
 	* core/Form/Primitives/PrimitiveDate.class.php: exportValue()
